--- a/index.html
+++ b/index.html
@@ -1953,6 +1953,7 @@
                 <div class="menu-item reveal" data-category="appetizers">
                     <div class="menu-item-header">
                         <div>
+                            <img src="IMG_9490.jpeg">
                             <h3 class="menu-item-title"> Hamburghini Fries</h3>
                         </div>
                         <div class="menu-item-price">3.5$</div>
