--- a/index.html
+++ b/index.html
@@ -1954,12 +1954,12 @@
                     <div class="menu-item-header">
                         <div>
                             <img src="IMG_9490.jpeg">
-                            <h3 class="menu-item-title"> Hamburghini Fries</h3>
+                            <h3 class="menu-item-title"> Small Hamburghini Fries</h3>
                         </div>
                         <div class="menu-item-price">3.5$</div>
                     </div>
                     <p class="menu-item-description">
-                        Fries with cheese sauce, 2 cutted chicken finger dipped in bbq sauce, pickles, cocktail sauce
+                        Fries with cheese sauce, cutted chicken finger dipped in bbq sauce, pickles, cocktail sauce
                     </p>
                 </div>
                 
